# cmder

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt  run.py  wsgi.py
backend/app/: __init__.py  config.py
backend/app/api/: routes.py
backend/app/services/: __init__.py  embedding.py  llm.py  vector_store.py
cli/: README.md  pyproject.toml  setup.py
cli/code_logger_cli/: __init__.py  commands.py  main.py
extension/: package-lock.json  package.json
extension/src/: extension.ts
