[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-logger-cli"
version = "0.1.0"
description = "CLI for Code Logger - integratable with any IDE"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28.0"]

[project.scripts]
code-logger = "code_logger_cli.commands:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_logger_cli*"]
